// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Datepicker Date of birth 1`] = `
<div>
  <div
    className="MuiFormControl-root MuiTextField-root MuiFormControl-marginDense"
    onClick={[Function]}
  >
    <label
      className="MuiFormLabel-root MuiInputLabel-root makeStyles-inputLabelRoot-407 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink makeStyles-shrink-408 MuiInputLabel-marginDense MuiInputLabel-outlined MuiFormLabel-filled"
      data-shrink={true}
    >
      Date of Birth
    </label>
    <div
      className="MuiInputBase-root MuiOutlinedInput-root makeStyles-root-399 MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd MuiInputBase-marginDense MuiOutlinedInput-marginDense"
      onClick={[Function]}
    >
      <input
        aria-invalid={false}
        autoFocus={false}
        className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd MuiInputBase-inputMarginDense MuiOutlinedInput-inputMarginDense makeStyles-inputMarginDense-409"
        disabled={false}
        onAnimationStart={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={false}
        type="text"
        value="27/09/1988"
      />
      <button
        className="MuiButtonBase-root MuiIconButton-root makeStyles-root-472 ForwardRef-iconButton-398"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M18.25 1a.75.75 0 0 1 .75.75v.75h2a3 3 0 0 1 3 3v13a3 3 0 0 1-3 3H3a3 3 0 0 1-3-3v-13a3 3 0 0 1 3-3h2v-.75a.75.75 0 0 1 1.5 0v.75h11v-.75a.75.75 0 0 1 .75-.75zM5 4H3l-.144.007A1.5 1.5 0 0 0 1.5 5.5v13A1.5 1.5 0 0 0 3 20h18a1.5 1.5 0 0 0 1.5-1.5v-13A1.5 1.5 0 0 0 21 4h-2v.75a.75.75 0 1 1-1.5 0V4h-11v.75a.75.75 0 0 1-1.5 0V4zm13.25 12.5a.75.75 0 0 1 .75.75v.5a.75.75 0 1 1-1.5 0v-.5a.75.75 0 0 1 .75-.75zm-4.167 0a.75.75 0 0 1 .75.75v.5a.75.75 0 1 1-1.5 0v-.5a.75.75 0 0 1 .75-.75zm-4.166 0a.75.75 0 0 1 .75.75v.5a.75.75 0 0 1-1.5 0v-.5a.75.75 0 0 1 .75-.75zm-4.167 0a.75.75 0 0 1 .75.75v.5a.75.75 0 1 1-1.5 0v-.5a.75.75 0 0 1 .75-.75zm12.5-3.5a.75.75 0 0 1 .75.75v.5a.75.75 0 1 1-1.5 0v-.5a.75.75 0 0 1 .75-.75zm-4.167 0a.75.75 0 0 1 .75.75v.5a.75.75 0 1 1-1.5 0v-.5a.75.75 0 0 1 .75-.75zm-4.166 0a.75.75 0 0 1 .75.75v.5a.75.75 0 0 1-1.5 0v-.5a.75.75 0 0 1 .75-.75zM5.75 13a.75.75 0 0 1 .75.75v.5a.75.75 0 1 1-1.5 0v-.5a.75.75 0 0 1 .75-.75zm12.5-3.5a.75.75 0 0 1 .75.75v.5a.75.75 0 1 1-1.5 0v-.5a.75.75 0 0 1 .75-.75zm-4.167 0a.75.75 0 0 1 .75.75v.5a.75.75 0 1 1-1.5 0v-.5a.75.75 0 0 1 .75-.75zm-4.166 0a.75.75 0 0 1 .75.75v.5a.75.75 0 0 1-1.5 0v-.5a.75.75 0 0 1 .75-.75zm10.333-3a.75.75 0 1 1 0 1.5H3.75a.75.75 0 0 1 0-1.5h16.5z"
            />
          </svg>
        </span>
      </button>
      <fieldset
        aria-hidden={true}
        className="PrivateNotchedOutline-root-504 MuiOutlinedInput-notchedOutline makeStyles-notchedOutline-401"
      >
        <legend
          className="PrivateNotchedOutline-legendLabelled-506 PrivateNotchedOutline-legendNotched-507"
        >
          <span>
            Date of Birth
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`Storyshots Datepicker Datepicker 1`] = `
<div>
  <div
    className="MuiFormControl-root MuiTextField-root MuiFormControl-marginDense"
    onClick={[Function]}
  >
    <label
      className="MuiFormLabel-root MuiInputLabel-root makeStyles-inputLabelRoot-139 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink makeStyles-shrink-140 MuiInputLabel-marginDense MuiInputLabel-outlined MuiFormLabel-filled"
      data-shrink={true}
    >
      Basic example
    </label>
    <div
      className="MuiInputBase-root MuiOutlinedInput-root makeStyles-root-131 MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd MuiInputBase-marginDense MuiOutlinedInput-marginDense"
      onClick={[Function]}
    >
      <input
        aria-invalid={false}
        autoFocus={false}
        className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd MuiInputBase-inputMarginDense MuiOutlinedInput-inputMarginDense makeStyles-inputMarginDense-141"
        disabled={false}
        onAnimationStart={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={false}
        type="text"
        value="27/09/1988"
      />
      <button
        className="MuiButtonBase-root MuiIconButton-root makeStyles-root-204 ForwardRef-iconButton-130"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M18.25 1a.75.75 0 0 1 .75.75v.75h2a3 3 0 0 1 3 3v13a3 3 0 0 1-3 3H3a3 3 0 0 1-3-3v-13a3 3 0 0 1 3-3h2v-.75a.75.75 0 0 1 1.5 0v.75h11v-.75a.75.75 0 0 1 .75-.75zM5 4H3l-.144.007A1.5 1.5 0 0 0 1.5 5.5v13A1.5 1.5 0 0 0 3 20h18a1.5 1.5 0 0 0 1.5-1.5v-13A1.5 1.5 0 0 0 21 4h-2v.75a.75.75 0 1 1-1.5 0V4h-11v.75a.75.75 0 0 1-1.5 0V4zm13.25 12.5a.75.75 0 0 1 .75.75v.5a.75.75 0 1 1-1.5 0v-.5a.75.75 0 0 1 .75-.75zm-4.167 0a.75.75 0 0 1 .75.75v.5a.75.75 0 1 1-1.5 0v-.5a.75.75 0 0 1 .75-.75zm-4.166 0a.75.75 0 0 1 .75.75v.5a.75.75 0 0 1-1.5 0v-.5a.75.75 0 0 1 .75-.75zm-4.167 0a.75.75 0 0 1 .75.75v.5a.75.75 0 1 1-1.5 0v-.5a.75.75 0 0 1 .75-.75zm12.5-3.5a.75.75 0 0 1 .75.75v.5a.75.75 0 1 1-1.5 0v-.5a.75.75 0 0 1 .75-.75zm-4.167 0a.75.75 0 0 1 .75.75v.5a.75.75 0 1 1-1.5 0v-.5a.75.75 0 0 1 .75-.75zm-4.166 0a.75.75 0 0 1 .75.75v.5a.75.75 0 0 1-1.5 0v-.5a.75.75 0 0 1 .75-.75zM5.75 13a.75.75 0 0 1 .75.75v.5a.75.75 0 1 1-1.5 0v-.5a.75.75 0 0 1 .75-.75zm12.5-3.5a.75.75 0 0 1 .75.75v.5a.75.75 0 1 1-1.5 0v-.5a.75.75 0 0 1 .75-.75zm-4.167 0a.75.75 0 0 1 .75.75v.5a.75.75 0 1 1-1.5 0v-.5a.75.75 0 0 1 .75-.75zm-4.166 0a.75.75 0 0 1 .75.75v.5a.75.75 0 0 1-1.5 0v-.5a.75.75 0 0 1 .75-.75zm10.333-3a.75.75 0 1 1 0 1.5H3.75a.75.75 0 0 1 0-1.5h16.5z"
            />
          </svg>
        </span>
      </button>
      <fieldset
        aria-hidden={true}
        className="PrivateNotchedOutline-root-236 MuiOutlinedInput-notchedOutline makeStyles-notchedOutline-133"
      >
        <legend
          className="PrivateNotchedOutline-legendLabelled-238 PrivateNotchedOutline-legendNotched-239"
        >
          <span>
            Basic example
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`Storyshots Datepicker Disabled 1`] = `
<div>
  <div
    className="MuiFormControl-root MuiTextField-root MuiFormControl-marginDense"
    onClick={[Function]}
  >
    <label
      className="MuiFormLabel-root MuiInputLabel-root makeStyles-inputLabelRoot-943 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink makeStyles-shrink-944 MuiInputLabel-marginDense MuiInputLabel-outlined Mui-disabled Mui-disabled MuiFormLabel-filled"
      data-shrink={true}
    >
      Disabled
    </label>
    <div
      className="MuiInputBase-root MuiOutlinedInput-root makeStyles-root-935 Mui-disabled Mui-disabled MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd MuiInputBase-marginDense MuiOutlinedInput-marginDense"
      onClick={[Function]}
    >
      <input
        aria-invalid={false}
        autoFocus={false}
        className="MuiInputBase-input MuiOutlinedInput-input Mui-disabled Mui-disabled MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd MuiInputBase-inputMarginDense MuiOutlinedInput-inputMarginDense makeStyles-inputMarginDense-945"
        disabled={true}
        onAnimationStart={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={false}
        type="text"
        value="27/09/1988"
      />
      <button
        className="MuiButtonBase-root MuiIconButton-root makeStyles-root-1008 ForwardRef-iconButton-934 Mui-disabled Mui-disabled"
        disabled={true}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={-1}
        type="button"
      >
        <span
          className="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M18.25 1a.75.75 0 0 1 .75.75v.75h2a3 3 0 0 1 3 3v13a3 3 0 0 1-3 3H3a3 3 0 0 1-3-3v-13a3 3 0 0 1 3-3h2v-.75a.75.75 0 0 1 1.5 0v.75h11v-.75a.75.75 0 0 1 .75-.75zM5 4H3l-.144.007A1.5 1.5 0 0 0 1.5 5.5v13A1.5 1.5 0 0 0 3 20h18a1.5 1.5 0 0 0 1.5-1.5v-13A1.5 1.5 0 0 0 21 4h-2v.75a.75.75 0 1 1-1.5 0V4h-11v.75a.75.75 0 0 1-1.5 0V4zm13.25 12.5a.75.75 0 0 1 .75.75v.5a.75.75 0 1 1-1.5 0v-.5a.75.75 0 0 1 .75-.75zm-4.167 0a.75.75 0 0 1 .75.75v.5a.75.75 0 1 1-1.5 0v-.5a.75.75 0 0 1 .75-.75zm-4.166 0a.75.75 0 0 1 .75.75v.5a.75.75 0 0 1-1.5 0v-.5a.75.75 0 0 1 .75-.75zm-4.167 0a.75.75 0 0 1 .75.75v.5a.75.75 0 1 1-1.5 0v-.5a.75.75 0 0 1 .75-.75zm12.5-3.5a.75.75 0 0 1 .75.75v.5a.75.75 0 1 1-1.5 0v-.5a.75.75 0 0 1 .75-.75zm-4.167 0a.75.75 0 0 1 .75.75v.5a.75.75 0 1 1-1.5 0v-.5a.75.75 0 0 1 .75-.75zm-4.166 0a.75.75 0 0 1 .75.75v.5a.75.75 0 0 1-1.5 0v-.5a.75.75 0 0 1 .75-.75zM5.75 13a.75.75 0 0 1 .75.75v.5a.75.75 0 1 1-1.5 0v-.5a.75.75 0 0 1 .75-.75zm12.5-3.5a.75.75 0 0 1 .75.75v.5a.75.75 0 1 1-1.5 0v-.5a.75.75 0 0 1 .75-.75zm-4.167 0a.75.75 0 0 1 .75.75v.5a.75.75 0 1 1-1.5 0v-.5a.75.75 0 0 1 .75-.75zm-4.166 0a.75.75 0 0 1 .75.75v.5a.75.75 0 0 1-1.5 0v-.5a.75.75 0 0 1 .75-.75zm10.333-3a.75.75 0 1 1 0 1.5H3.75a.75.75 0 0 1 0-1.5h16.5z"
            />
          </svg>
        </span>
      </button>
      <fieldset
        aria-hidden={true}
        className="PrivateNotchedOutline-root-1040 MuiOutlinedInput-notchedOutline makeStyles-notchedOutline-937"
      >
        <legend
          className="PrivateNotchedOutline-legendLabelled-1042 PrivateNotchedOutline-legendNotched-1043"
        >
          <span>
            Disabled
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`Storyshots Datepicker Min and Max Dates 1`] = `
<div>
  <div
    className="MuiFormControl-root MuiTextField-root MuiFormControl-marginDense"
    onClick={[Function]}
  >
    <label
      className="MuiFormLabel-root MuiInputLabel-root makeStyles-inputLabelRoot-675 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink makeStyles-shrink-676 MuiInputLabel-marginDense MuiInputLabel-outlined MuiFormLabel-filled"
      data-shrink={true}
    >
      Min Max
    </label>
    <div
      className="MuiInputBase-root MuiOutlinedInput-root makeStyles-root-667 MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd MuiInputBase-marginDense MuiOutlinedInput-marginDense"
      onClick={[Function]}
    >
      <input
        aria-invalid={false}
        autoFocus={false}
        className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd MuiInputBase-inputMarginDense MuiOutlinedInput-inputMarginDense makeStyles-inputMarginDense-677"
        disabled={false}
        onAnimationStart={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={false}
        type="text"
        value="27/09/1988"
      />
      <button
        className="MuiButtonBase-root MuiIconButton-root makeStyles-root-740 ForwardRef-iconButton-666"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M18.25 1a.75.75 0 0 1 .75.75v.75h2a3 3 0 0 1 3 3v13a3 3 0 0 1-3 3H3a3 3 0 0 1-3-3v-13a3 3 0 0 1 3-3h2v-.75a.75.75 0 0 1 1.5 0v.75h11v-.75a.75.75 0 0 1 .75-.75zM5 4H3l-.144.007A1.5 1.5 0 0 0 1.5 5.5v13A1.5 1.5 0 0 0 3 20h18a1.5 1.5 0 0 0 1.5-1.5v-13A1.5 1.5 0 0 0 21 4h-2v.75a.75.75 0 1 1-1.5 0V4h-11v.75a.75.75 0 0 1-1.5 0V4zm13.25 12.5a.75.75 0 0 1 .75.75v.5a.75.75 0 1 1-1.5 0v-.5a.75.75 0 0 1 .75-.75zm-4.167 0a.75.75 0 0 1 .75.75v.5a.75.75 0 1 1-1.5 0v-.5a.75.75 0 0 1 .75-.75zm-4.166 0a.75.75 0 0 1 .75.75v.5a.75.75 0 0 1-1.5 0v-.5a.75.75 0 0 1 .75-.75zm-4.167 0a.75.75 0 0 1 .75.75v.5a.75.75 0 1 1-1.5 0v-.5a.75.75 0 0 1 .75-.75zm12.5-3.5a.75.75 0 0 1 .75.75v.5a.75.75 0 1 1-1.5 0v-.5a.75.75 0 0 1 .75-.75zm-4.167 0a.75.75 0 0 1 .75.75v.5a.75.75 0 1 1-1.5 0v-.5a.75.75 0 0 1 .75-.75zm-4.166 0a.75.75 0 0 1 .75.75v.5a.75.75 0 0 1-1.5 0v-.5a.75.75 0 0 1 .75-.75zM5.75 13a.75.75 0 0 1 .75.75v.5a.75.75 0 1 1-1.5 0v-.5a.75.75 0 0 1 .75-.75zm12.5-3.5a.75.75 0 0 1 .75.75v.5a.75.75 0 1 1-1.5 0v-.5a.75.75 0 0 1 .75-.75zm-4.167 0a.75.75 0 0 1 .75.75v.5a.75.75 0 1 1-1.5 0v-.5a.75.75 0 0 1 .75-.75zm-4.166 0a.75.75 0 0 1 .75.75v.5a.75.75 0 0 1-1.5 0v-.5a.75.75 0 0 1 .75-.75zm10.333-3a.75.75 0 1 1 0 1.5H3.75a.75.75 0 0 1 0-1.5h16.5z"
            />
          </svg>
        </span>
      </button>
      <fieldset
        aria-hidden={true}
        className="PrivateNotchedOutline-root-772 MuiOutlinedInput-notchedOutline makeStyles-notchedOutline-669"
      >
        <legend
          className="PrivateNotchedOutline-legendLabelled-774 PrivateNotchedOutline-legendNotched-775"
        >
          <span>
            Min Max
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`Storyshots Datepicker TimePicker 1`] = `
<div>
  <div
    className="MuiFormControl-root MuiTextField-root MuiFormControl-marginDense"
    onClick={[Function]}
  >
    <label
      className="MuiFormLabel-root MuiInputLabel-root makeStyles-inputLabelRoot-1201 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink makeStyles-shrink-1202 MuiInputLabel-marginDense MuiInputLabel-outlined"
      data-shrink={true}
    >
      Pick a time
    </label>
    <div
      className="MuiInputBase-root MuiOutlinedInput-root makeStyles-root-1193 MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd MuiInputBase-marginDense MuiOutlinedInput-marginDense"
      onClick={[Function]}
    >
      <input
        aria-invalid={false}
        autoFocus={false}
        className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd MuiInputBase-inputMarginDense MuiOutlinedInput-inputMarginDense makeStyles-inputMarginDense-1203"
        disabled={false}
        onAnimationStart={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={false}
        type="text"
        value=""
      />
      <button
        className="MuiButtonBase-root MuiIconButton-root makeStyles-root-1266 ForwardRef-iconButton-1192"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 0c6.627 0 12 5.373 12 12s-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0zm0 1.5C6.201 1.5 1.5 6.201 1.5 12S6.201 22.5 12 22.5 22.5 17.799 22.5 12 17.799 1.5 12 1.5zM12 3a.75.75 0 0 1 .75.75v7.827l4.413 2.548a.75.75 0 0 1-.75 1.299l-4.763-2.75a.75.75 0 0 1-.17-.133.747.747 0 0 1-.23-.541V3.75A.75.75 0 0 1 12 3z"
            />
          </svg>
        </span>
      </button>
      <fieldset
        aria-hidden={true}
        className="PrivateNotchedOutline-root-1298 MuiOutlinedInput-notchedOutline makeStyles-notchedOutline-1195"
      >
        <legend
          className="PrivateNotchedOutline-legendLabelled-1300 PrivateNotchedOutline-legendNotched-1301"
        >
          <span>
            Pick a time
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</div>
`;
